--- a/collectionView/Base.lproj/Main.storyboard
+++ b/collectionView/Base.lproj/Main.storyboard
@@ -37,6 +37,12 @@
                                 <color key="textColor" systemColor="tintColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pexels-thatguycraig000-1563356" translatesAutoresizingMaskIntoConstraints="NO" id="pji-MM-Tiw">
+                                <rect key="frame" x="20" y="378" width="353" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="m2z-eC-c8C"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -45,9 +51,13 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5IA-yH-RTk" secondAttribute="trailing" constant="20" id="7SK-Cd-8oq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fMN-eY-9EX" secondAttribute="bottom" constant="10" id="BYO-Rn-jcZ"/>
                             <constraint firstItem="fMN-eY-9EX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="HZ1-R8-8HG"/>
+                            <constraint firstItem="pji-MM-Tiw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cTu-cJ-jee"/>
+                            <constraint firstItem="pji-MM-Tiw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g0j-R6-8zZ"/>
                             <constraint firstItem="5IA-yH-RTk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gei-do-sy5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fMN-eY-9EX" secondAttribute="trailing" constant="20" id="m2D-sh-x5E"/>
                             <constraint firstItem="re8-4p-PKV" firstAttribute="width" secondItem="5IA-yH-RTk" secondAttribute="width" id="pwS-RY-iSX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pji-MM-Tiw" secondAttribute="trailing" constant="20" id="r3E-lt-kl9"/>
+                            <constraint firstItem="fMN-eY-9EX" firstAttribute="top" secondItem="pji-MM-Tiw" secondAttribute="bottom" constant="30" id="t7Q-nq-Xce"/>
                             <constraint firstItem="re8-4p-PKV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uzl-MJ-Fwb"/>
                             <constraint firstItem="5IA-yH-RTk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="yC0-FH-7uk"/>
                         </constraints>
@@ -60,6 +70,7 @@
     </scenes>
     <resources>
         <image name="pexels-simon73-1323550" width="4608" height="2963"/>
+        <image name="pexels-thatguycraig000-1563356" width="5472" height="3648"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
